app/assets/themes/pixelache/stylesheets/main.css.scss
@import 'variables';

.top-bar-wrapper {
  height: 40px;
}

nav.top-bar {
  
  li.menu_link {
    color: white;
    width: 4.5rem;
    text-align: right;
    a {
      padding: 0 8px 0 0 !important;
      color: white !important;
      font-size: 0.9rem;
    }
  }
  form {
    input#search_term {
      top: 4px;
    }
  }
  
  .lang {
    font-size: 1rem;
    text-transform: uppercase;
    color: white;
    padding: 10px 1.4rem;
    max-height: 40px;
    span.divider {
      color: #666;
    }
  }
  li.tagline {

    a {
      font-family: Open Sans;
      font-weight: 600;
      text-transform: uppercase;
      font-size: 1.1rem;
      color: #929497 !important;
    }
  }

  ul.right {

    li {
      font-family: Open Sans;
      font-weight: 800;
      font-size: 16px;
      a {
        text-transform: uppercase;
        color: #fff100;
        background: #000 !important;
      }
      &.active {
        background: none;
      }
    }
  }
  
}

.contain-to-grid.admin {
  background-color: #3fc7ff;
}
.devise_new_session {
  padding: 25px 0px;
  p {
    a {
      color: black;
    }
  }
  .option {
    padding: 10px;
  }
}
nav.top-bar.admin {
  background-color: #3fc7ff;
  height: 35px;
  
  .name {
    height: 35px;
    margin-left: 13px;
    font-size: 14px;
    h1 {
      line-height: 35px;
    }
  }
  .top-bar-section {
    li, a {
      background-color: #3fc7ff;
      height: 35px;
    }
  }
  input#searchterm {
    margin-top: -5px;

  }
}

// pagination
ul.pagination { 
  margin-bottom: 2rem;
  float: left;
  li.current a { 
    background-color: $newblue !important;
  }
  li.next, li.first, li.last, li.prev {
    margin-top: 33px;
  }
}




table.etherpads {
  ul {
    li {
      list-style-type: none;
      font-size: 0.9rem;
    }
  }
}
.magellan-scrollnav {
  [data-magellan-expedition-clone] {
    dl.sub-nav {
      display: none;
    }
  }
  [data-magellan-expedition], [data-magellan-expedition-clone] {
    width: 250px;
    min-width: 0;
    background: none;
    dl {

    }
    dd {
      background-color: none;
      float: none;
      display: block;
      padding: 1.1rem;
      border-bottom: 1px solid #FFF;
      &.last {
        border-bottom: none;
      }
      a {
        
        font-family: $quicksand;
        font-weight: 300;
        text-transform: uppercase;
        font-size: 1.125rem;
        color: #FFF;
      }
    }
  }
}


// common styles for related items
.related_container {
  
  &.post {
    .related_title {
      padding-left: 0;
    }

  }
  
  
  
  .related_title {
    h1 {
      font-family: "Quicksand", sans-serif;
      font-size: 2.8rem;
      color: #333;
      text-transform: uppercase;
      margin: 1.25rem 0;
    }
  }
  .related {
    &.column {
      padding-left: 0;
    }
    border-bottom: 1px solid #333;
    padding-bottom: 1.2rem;
    margin: 1rem 0;

    &.project {
      .related_title {
        margin-bottom: 0.8rem;
      }
    }
    .related_title {
      font-family: $quicksand;
      font-size: 1.3rem;
      color: #333;
      line-height : 1.8rem;
      a {
        color: #333;
        &:hover{ 
          color: #999;
        }
      }
    }
    .related_date {
      font-size: 0.8rem;
      color: #999;
      font-family: $quicksand;
      margin-bottom: 1rem;
    }
    .related_excerpt , .related_excerpt p {
      font-size: 0.9rem;
      color: #333;
      line-height: 1.4rem;
    }
    .read_more {
      margin: 0.8rem 0;
      text-transform: lowercase;
      a {
        font-family: $quicksand;
        color: #333;
        font-size: 1.2rem;
        margin: 0.4rem 0;
        &:hover {
          color: #999;
        }
      }
    }
  }
  
}

